# DiffDock-Relax

./: .gitignore  README.md  environment.yml  examples.py  mutate_pdb.py  pyproject.toml  run_simulation_modal.py  simulateComplex.py  simulateComplexWithSolvent.py
MD_protein_ligand/: extract_ligands.py  simulate.py
