[project]
name = "MD_protein_ligand"
version = "2023.08.16"
description = "MD protein and a ligand"

dependencies = [
  "mdtraj==1.9.9"
]

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[dependencies]
"mdtraj" = "1.9.4"
